--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,11 +17,9 @@ import { Icon } from "astro-icon";
               <p
                 class="text-base font-semibold uppercase tracking-wider text-purple-400"
               >
-                All space travel in one place
+                Landinga Pages thst's rock
               </p>
-              <h1 id="hero-title" class="display text-gray-800">
-                Choose your next space adventure
-              </h1>
+              <h1 id="hero-title" class="display text-gray-800">LandTapp</h1>
               <p
                 id="tagline"
                 class="mt-4 text-base text-gray-800 sm:text-xl lg:mt-8"
@@ -109,7 +107,7 @@ import { Icon } from "astro-icon";
           <article
             class="feature-card rounded-xl text-left bg-white p-6 md:p-8 lg:p-14"
           >
-            <Icon name="ph:heartbeat-duotone" class="w-12" />
+            <Icon name="ph:heartbeat-duotone" class="w-16" />
             <h3 class="mt-12 text-xl font-semibold text-gray-900">Safety</h3>
             <p class="mt-5 text-base lg:text-lg text-gray-600">
               Lorem ipsum dolor sit amet, consectetur adipis elit. Sit enim nec,
